# deep-research-agent

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml  secrets-check.yml  security.yml
agent/: budget_guard.py  circuit_breaker.py  graph.py  retry_policy.py  state.py
agent/middleware/: __init__.py  pii_filter.py
agent/nodes/: __init__.py  arxiv_agent.py  classifier.py  critic.py  github_agent.py  planner.py  supervisor.py  synthesizer.py  web_agent.py  writer.py
agent/prompts/: critic.yaml  planner.yaml  supervisor.yaml  synthesizer.yaml
api/: main.py
app/: Dockerfile  __init__.py  streamlit_app.py
app/components/: __init__.py  auth.py  source_graph.py  theme.py
app/pages/: __init__.py  research.py  traces.py
config/: profiles.py  settings.py
config/profiles/: deep.yaml  fast.yaml
docs/: ARCHITECTURE.md  EVALUATION.md  INFRASTRUCTURE.md
evaluation/: benchmark_queries.json  evaluator.py  run_benchmark.py
mcp_servers/arxiv/: Dockerfile  server.py
mcp_servers/github/: Dockerfile  server.py
mcp_servers/shared/: __init__.py  auth.py  cache.py
mcp_servers/web_search/: Dockerfile  auth.py  cache.py  requirements.txt  server.py
observability/: __init__.py  dashboard.py  schema.sql  tracer.py
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_agent_nodes.py  test_api_endpoints.py  test_api_validation.py  test_budget_guard.py  test_evaluator.py  test_mcp_servers.py  test_observability.py  test_pii_filter.py  test_report_formatter.py  test_retry_policy.py
utils/: auth.py  callbacks.py  cost_estimator.py  logger.py  report_formatter.py
